--- a/app/components/welcome/style.module.css
+++ b/app/components/welcome/style.module.css
@@ -24,6 +24,6 @@
 .logo {
   width: 48px;
   height: 20px;
-  background: url(./icons/coverart.png) center center no-repeat;
+  background: url(./icons/AICU-LogoWT.png) center center no-repeat;
   background-size: contain;
 }
