--- a/app/components/base/app-icon/style.module.css
+++ b/app/components/base/app-icon/style.module.css
@@ -1,5 +1,8 @@
 .appIcon {
   @apply flex items-center justify-center relative w-9 h-9 text-lg bg-teal-100 rounded-lg grow-0 shrink-0;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
 }
 
 .appIcon.large {
@@ -20,4 +23,9 @@
 
 .appIcon.rounded {
   @apply rounded-full;
+}
+
+.appIconText {
+  @apply z-10 text-white font-bold;
+  text-shadow: 2px 2px 4px rgba(0,0,0,0.5);
 }
